Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113738

[REG 6.4.3 -> 6.5.0] TableView positionViewAtCell crash

XMLWordPrintable

    • 4bd3738a4 (dev), d9c838c7d (6.6), 67e8acf85 (6.5)

      Given the following reduced test case:

      import QtQuick
      import QtQml
      
      TableView
      {
          model: 5
      
          delegate: Rectangle {
              implicitWidth: 100
              implicitHeight: 50        
      
              Text {
                  text: index
                  anchors.centerIn: parent
              }
          }    
      
          Component.onCompleted: {
              positionViewAtCell(
                  Qt.point(0,0),
                  TableView.AlignHCenter,
                  Qt.point(0,0)
              );
          }
      } 

       

      Running it with the "qml" binary from 6.5.0 results in a segfault due to the  positionViewAtCell() call.

       

      There is no segfault in 6.4.3.

        For Gerrit Dashboard: QTBUG-113738
        # Subject Branch Project Status CR V

            santhoshkumar Santhosh Kumar Selvaraj
            ngladitz Nils Gladitz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes