Fix crash while positioning zero sized table view

TableView expects view size to be specified for loading model items
within it. If not specified, it doesn't load any items (change made
after patch set ebefb583c886dba86aa51012fb377762235f2379).

If user positions the view through positionViewAtCell or
positionViewAtColumn or positionViewAtRow without specifying view size,
then the TableView crashes and its an unexpected behavior.

This patch set adds validation in the TableView to check for loaded
columns or rows during positioning. The document also been updated to
show the expected behavior of TableView when size not specified.

Fixes: QTBUG-113738
Pick-to: 6.5 6.6
Change-Id: Ibd72caada5bfeb290ab5eff3b9ead1e07b3a7176
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>